# PollutionSimulator

./: CMakeLists.txt  main.cpp
Data_Structures/: LinkedList.h  LinkedList_imp.h  SortedPair.h
Inheritance/: Car.cpp  Car.h  FamilyCar.h  LuxuryCar.h  Maserati.h
Modul/: CrossSection.cpp  Road.cpp  Road.h  SportsCar.h
New folder/: CrossSection.h  FileParse.cpp  FileParse.h  Metropolis.cpp  Metropolis.h  Simulation.cpp  Simulation.h  SortedPair.h
Simulator/: Simulation.cpp
